# awesome-cursor-rules-mdc

./: .env.example  .gitignore  README.md  conversion_report.json  convert_to_mdc.py  cursor-rules-docs.md  generate_mdc_files.py  mdc-instructions.txt  mdc_generation_progress.json  pyproject.toml  requirements.txt  rules.json  test_conversion.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cursor-rules-cli/: .pypirc  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  RULES_JSON_README.md  cursor-rules-cli.cast  plan.md  rules.json  setup.py
cursor-rules-cli/docs/: user_guide.md
cursor-rules-cli/src/: __init__.py  installer.py  (+5 more)
rules-mdc/: actix-web.mdc  aiohttp.mdc  amazon-ec2.mdc  amazon-s3.mdc  android-sdk.mdc  angular.mdc  ansible.mdc  ant-design.mdc  anyio.mdc  apollo-client.mdc  apollo-graphql.mdc  asp-net.mdc  astro.mdc  asyncio.mdc  auth0.mdc  autogen.mdc  aws-amplify.mdc  aws-cli.mdc  aws-dynamodb.mdc  aws-ecs.mdc  aws-lambda.mdc  aws-rds.mdc  aws.mdc  axios.mdc  azure-pipelines.mdc  azure.mdc  bash.mdc  beautifulsoup4.mdc  behave.mdc  black.mdc  boto3.mdc  bottle.mdc  bun.mdc  c-sharp.mdc  chakra-ui.mdc  cheerio.mdc  circleci.mdc  clerk.mdc  click.mdc  cloudflare.mdc  (+200 more)
src/: config.py  config.yaml  constants.py  exa-example.py  exa_search.py  failover-exa-instructions.txt  generate_mdc_files.py  libraries.json  library_processor.py  llm-instructions.txt  llm_request.py  logger.py  main.py  mdc-instructions.txt  mdc.py  mdc_generation_progress.json  mdc_generator.py  models.py  plan.md  progress_tracker.py
test-cursor-rules/: test_downloader.py
(+6 files in other folders)
