[project]
name = "cursor-rules-mdc"
version = "0.1.0"
description = "Convert Cursor rules to MDC rules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "exa-py>=1.8.9",
    "litellm>=1.61.17",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "typing-extensions>=4.12.2",
]
